--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Web Worker Demo</title>
+
+    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|Roboto+Condensed&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <noscript>
