--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>Web Worker Demo</title>
 
-    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|Roboto+Condensed:400,700&display=swap" rel="stylesheet">
 
   </head>
   <body>
